Flattening of publication vector

--- a/bibtools/src/test/resources/testdata/bibliography/two_items_conflicting.bib
+++ b/bibtools/src/test/resources/testdata/bibliography/two_items_conflicting.bib
@@ -1,5 +1,5 @@
 @ARTICLE{Wang201427,
-    author={Wang, X. and Pollock, L. and Vijay-Shanker, K.},
+    author={Wang, X. and Pollock, L.},
     title={Automatic segmentation of method code into meaningful blocks: Design and evaluation},
     journal={Journal of software: Evolution and Process},
     year={2014},
