--- a/bibtools/src/test/resources/testdata/bibliography/two_items_conflicting2.bib
+++ b/bibtools/src/test/resources/testdata/bibliography/two_items_conflicting2.bib
@@ -5,7 +5,7 @@
     year={2014},
     doi={10.1002/smr.1581},
     note={cited By 4},
-    url={https://www.scopus.com/inward/record.uri?eid=2-s2.0-84899100471&doi=10.1002%2fsmr.1581&partnerID=40&md5=e86fea1c2c39a3c591692985f73dec3a},
+    url={https://www.scopus.com/inward/record.uri?eid=2-s2.0-84899100471},
     document_type={Conference Paper},
     source={Scopus},
 }
